--- a/plugins/tools/readme.html
+++ b/plugins/tools/readme.html
@@ -1,3 +1,3 @@
-wget https://github.com/vvcares/hestia/blob/master/plugins/tools/hestia-tools.sh -O ./Install_Tools.sh
+wget https://raw.githubusercontent.com/vvcares/hestia/master/plugins/tools/hestia-tools.sh -O ./Install_Tools.sh
 chmod 777 ./Install_Tools.sh
 sudo ./Install_Tools.sh
